[tool.poetry]
name = "fastapi petproj1"
version = "0.1.0"
description = "Мой первый пет-проект на фастапи"
authors = ["bobr-ik <aavramenko804@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.10.2"}
sqlalchemy = "^2.0.36"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
